# grpc_pyo3

./: Cargo.toml  pyproject.toml
src/: lib.rs  server.rs
