[package]
name = "grpc_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "grpc_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"